@@ -1,4 +1,8 @@
 2012-03-27 Martin Grunewald  <Martin.Grunewald@cern.ch>
+	* tag V01-06-37
+	* propagate path renaming to HLTPrescaler instance label
+
+2012-03-27 Martin Grunewald  <Martin.Grunewald@cern.ch>
 	* tag V01-06-36
 	* add pattern-matching filter to smart renaming
 	
